[tool.poetry]
name = "chainit"
version = "0.2.1"
description = "Chainable lazy iterators"
authors = ["Luka Peschke <mail@lukapeschke.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lukapeschke/chainit"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = ">=23.1.0"
isort = "^5.12.0"
pylint = "^2.17.1"
mypy = "^1.1"

[tool.mypy]
strict = true
pretty = true

[tool.black]
line-length = 100

[tool.pylint.MASTER]
ignore = "tests"
jobs = 0

[tool.pylint.BASIC]
good-names = ["fn", "n", "O", "T", "U"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
