[tool.poetry]
name = "chainit"
version = "0.3.0"
description = "Chainable lazy iterators"
authors = ["Luka Peschke <mail@lukapeschke.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lukapeschke/chainit"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pytest = ">=7.4.3,<9.0.0"
mypy = "^1.7"

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
