[project]
name = "chainit"
version = "0.4.0"
description = "Chainable lazy iterators"
authors = [
    {name = "Luka Peschke", email = "mail@lukapeschke.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]

[project.urls]
Repository = "https://github.com/lukapeschke/chainit"

[dependency-groups]
dev = [
    "ruff>=0.5.1,<0.16.0",
    "pytest>=7.4.3,<9.0.0",
    "mypy>=1.7",
]

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
